--- a/nba_helper_functions.ipynb
+++ b/nba_helper_functions.ipynb
@@ -9,6 +9,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas -q; pip install bs4 -q; pip install html5lib -q; pip install matplotlib -q; pip install requests -q; pip install lxml -q; pip install tabulate -q"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
